feat: stateless auth, create token handler
